# vaults

./: .cursorignore  .gitignore  .prettierignore  .prettierrc.json  Anchor.toml  README.md  SECURITY.md  env.example  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
.github/: CODEOWNERS
keepers/price_pusher/: .env.example  README.md  config.yaml  docker-compose.yaml  run
programs/jupiter/: Cargo.toml
programs/transfer_hook/: Cargo.toml
programs/vault_manager/: Cargo.toml
programs/vault_manager/src/: constants.rs  depositor.rs  event.rs  lib.rs  vault.rs  vault_balance.rs  whitelist.rs
programs/vault_manager/src/controllers/: token.rs  vault_token.rs
programs/vault_manager/src/instructions/: add_token.rs  create_vault.rs  deposit.rs  initialize_whitelist.rs  mod.rs  swap_on_jupiter.rs  withdraw.rs
programs/vault_manager/src/state/: mod.rs  vault.rs  whitelist.rs
programs/vaults/: Cargo.toml
programs/vaults/src/: constants.rs  jupiter.rs  lib.rs
programs/vaults/src/controllers/: deposit_token.rs  mod.rs  token.rs  token_account.rs  token_metadata.rs  token_price.rs  transfer_hook.rs  vault_aum.rs  vault_nav.rs  vault_token.rs  vtoken.rs  whitelist.rs  withdraw_token.rs
programs/vaults/src/instructions/: add_manager.rs  add_token.rs  close_vault.rs  collect_management_fee.rs  complete_withdrawal.rs  create_vault.rs  deposit.rs  initialize.rs  initialize_starke.rs  initialize_whitelist.rs  manager_whitelist.rs  migrate_user_whitelist.rs  mint_management_fees.rs  mint_performance_fees.rs  mint_platform_fees.rs  mod.rs  pause_deposits.rs  pause_or_resume_deposits.rs  pause_or_resume_starke.rs  pause_or_resume_withdraws.rs  pause_starke.rs  remove_manager.rs  remove_token.rs  request_withdrawal.rs  resume_deposits.rs  resume_starke.rs  set_vault_deposit_fee.rs  swap_on_jupiter.rs  swap_to_deposit_token_on_jupiter.rs  test_pyth_price_feed.rs  test_remaining_accounts.rs  token_whitelist.rs  update_fund.rs  update_lock_in_period.rs  update_platform_fees.rs  update_vault_fees.rs  update_withdrawal_delay.rs  user_whitelist.rs  withdraw.rs  withdraw_in_deposit_token.rs
programs/vaults/src/instructions/tests/: add_manager.rs  add_token.rs  common_utils.rs  mod.rs  pause_stark.rs  remove_manager.rs  remove_token.rs  resume_stark.rs  update_vault_fees.rs
programs/vaults/src/state/: events.rs  manager_whitelist.rs  mod.rs  starke_config.rs  token_whitelist.rs  user_deposit_info.rs  user_whitelist.rs  vault.rs  vault_deposit_fee_config.rs  whitelist.rs  withdrawal_request.rs
scripts/: build  build-verifiable  close-buffers  close-program  continue-deploy-mainnet  deploy-mainnet  test  upgrade-mainnet
sdk/: constants.ts  events.ts  index.ts  types.ts  utils.ts
sdk-ts/: enhanced-sdk.ts  enhancedSdk.ts  index.ts  package.json  pdas.ts  transferHook.ts  tsconfig.json  types.ts  utils.ts  whitelist.ts
sdk-ts/lib/: dynamicWalletAdapter.ts  errors.ts  jupiter.ts  pdas.ts  signer-adapter.ts  signer-types.ts  signerAdapter.ts  solana.ts  transaction.ts  types.ts
tests/: mainnet.setup.ts  remainingAccounts.ts  script.ts  utils.ts  vault.ts  vaultManager.ts  vaults.ts  whitelist.ts
tests/sdk/: instructions.test.ts
tests/transferHook/: temp.test.ts
tests/unit/: sdk.test.ts
tests/utils.new/: airdrop.ts  constants.ts  index.ts  keypairs.ts  provider.ts
tests/vaults/: vaults.ts  (+30 more)
(+5 files in other folders)
