[package]
name = "vault-manager"
version = "0.1.0"
description = "vault manager program that can create and manage starke vaults"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault_manager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1" }
