[package]
name = "vaults"
version = "0.1.0"
description = "Vaults program that can create and manage Starke vaults on Solana."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vaults"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1" }
solana-security-txt = { version = "1.1.1" }
pyth-solana-receiver-sdk = { version = "0.3.2" }
jupiter = { path = "../jupiter", features = ["no-entrypoint"] }
